# prototipos-interface

./: pyproject.toml
prototipos_interfaces/: .isort.cfg  Guide.md  app.py  controller.py  hello.css  style.css  view.py
prototipos_interfaces/testes/: bkp-interface.py  directory_list.py  extract_text_app.py  hello_textual.py  hello_textual3.py  hello_textual4.py  interface.py  tui_form.py
prototipos_interfaces/tmp/: example03.py  example05.py
